--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -9,8 +9,11 @@
     border: 1px solid black;
 }
 
+.movieCard a {
+    text-decoration: none;
+}
+
 .title {
     text-align: center;
     color: black;
-    text-decoration: none;
 }
